@@ -8,8 +8,6 @@
 #include "SSD1306Wire.h"
 #include "/Users/steve/repos/tesla-charge/inc/TeslaChargeFont.h"
 
-#define DEBUG_URL       0   // Call the debug data HTTP URL
-#define DEBUG_DEVEL     0   // Testing on a non production unit
 #define DEBUG_MAGNET    0   // REED switch on at all times
 #define DEBUG_MOTION    0   // PIR on at all times
 
@@ -25,11 +23,11 @@
 #define CHARGE_MIN      0    // Minimum battery level
 #define ALARM_ON_TIME   100  // Alarm cycle on time (milliseconds)
 #define ALARM_OFF_TIME  3000 // Alarm cycle off time (milliseconds)
-#define ALARM_CHARGE    70   // Below this battery level, audible alarm sounds
+#define ALARM_CHARGE    70   // Below this battery percent, audible alarm sounds
 
 #define DATA_DELAY      500  // Wait between API calls (milliseconds)
 
-char apiToken[86];
-char apiURL[64];
+char apiURL[64];             // Maximum length of the API URL
+char apiToken[86];           // Maximum length of API token (don't change this!)
 
 #endif
